[package]
name = "ycsb"
version = "0.0.0"
authors = ["Pekka Enberg <penberg@chiselstrike.com>"]
edition = "2021"

[dependencies]
anyhow = "1"
log = "0.4"
rand = {version = "0.8", features = ["small_rng"]}
serde = { version = "1", features = ["derive"] }
structopt = "0.3"
toml = "0.8"
async-trait = "0.1"
futures = "0.3"
sql-builder = "3.1"
tokio = { version = "1", features = ["full"] }
