[package]
name = "sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
itertools = "0.10"
rusqlite = "0.28"
toml = "0.5"
ycsb = { "path" = "../../lib" }
tokio = { version = "1", features = ["full"] }